--- a/precastr/Base.lproj/Main.storyboard
+++ b/precastr/Base.lproj/Main.storyboard
@@ -608,7 +608,7 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mandeep Singh" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v1D-b1-FX9">
-                                                     <rect key="frame" x="67" y="13" width="280" height="21"/>
+                                                    <rect key="frame" x="67" y="12" width="280" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="VisbyCF-Medium" family="Visby CF" pointSize="16"/>
                                                     <color key="textColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1066,18 +1066,20 @@
                                         <inset key="imageEdgeInsets" minX="4" minY="4" maxX="4" maxY="4"/>
                                         <state key="normal" image="facebook-group"/>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1iz-7M-8Pz">
+                                        <rect key="frame" x="2" y="25" width="125" height="22"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.39215686274509803" green="0.65098039215686276" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="Edit Post" image="pencil"/>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JQX-kR-x0L">
                                 <rect key="frame" x="0.0" y="450" width="375" height="128"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yvu-ie-aef">
-                                        <rect key="frame" x="20" y="15" width="12" height="12"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0m1-4W-4LX">
                                         <rect key="frame" x="40" y="15" width="80" height="12"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -1091,11 +1093,6 @@
                                         </attributedString>
                                         <color key="highlightedColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                                     </label>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RGC-c2-kyY">
-                                        <rect key="frame" x="140" y="15" width="12" height="12"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PKy-g4-xZO">
                                         <rect key="frame" x="160" y="15" width="60" height="12"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -1109,11 +1106,6 @@
                                         </attributedString>
                                         <color key="highlightedColor" red="0.1333333333" green="0.1333333333" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
                                     </label>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ka5-Fu-EoE">
-                                        <rect key="frame" x="220" y="15" width="12" height="12"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oBr-fu-v5B">
                                         <rect key="frame" x="240" y="15" width="80" height="12"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -1127,11 +1119,6 @@
                                         </attributedString>
                                         <color key="highlightedColor" red="0.1333333333" green="0.1333333333" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
                                     </label>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9YW-9I-wzy">
-                                        <rect key="frame" x="310" y="15" width="12" height="12"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sgz-YI-5Lf">
                                         <rect key="frame" x="330" y="15" width="60" height="12"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
@@ -1145,12 +1132,42 @@
                                         </attributedString>
                                         <color key="highlightedColor" red="0.1333333333" green="0.1333333333" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="line" placeholder="Type a Message...." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wUy-R8-dfa">
-                                        <rect key="frame" x="10" y="49" width="355" height="71"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                        <attributedString key="attributedText"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gNM-hz-f2g">
+                                        <rect key="frame" x="15" y="35" width="360" height="85"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZMl-m3-CAH">
+                                        <rect key="frame" x="15" y="15" width="10" height="10"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
+                                        <connections>
+                                            <action selector="multipleButtonClicked:" destination="isS-Sv-T1f" eventType="touchUpInside" id="LZv-hp-udY"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ht9-LT-4aS">
+                                        <rect key="frame" x="139" y="15" width="10" height="10"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <connections>
+                                            <action selector="multipleButtonClicked:" destination="isS-Sv-T1f" eventType="touchUpInside" id="zeL-5J-UcQ"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="3" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5We-5s-HmB">
+                                        <rect key="frame" x="218" y="15" width="10" height="10"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <connections>
+                                            <action selector="multipleButtonClicked:" destination="isS-Sv-T1f" eventType="touchUpInside" id="QLy-aP-0pJ"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="4" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oaM-xD-RY0">
+                                        <rect key="frame" x="310" y="15" width="10" height="10"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <connections>
+                                            <action selector="multipleButtonClicked:" destination="isS-Sv-T1f" eventType="touchUpInside" id="3Gk-33-JtR"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
@@ -1168,6 +1185,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.039215686274509803" green="0.34509803921568627" blue="0.72156862745098038" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" image="clips"/>
+                                <connections>
+                                    <action selector="mediaAttachmentBtnClicked:" destination="isS-Sv-T1f" eventType="touchUpInside" id="NfC-il-NlI"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SeF-yk-w9f">
                                 <rect key="frame" x="273" y="609" width="86" height="30"/>
@@ -1175,19 +1195,24 @@
                                 <color key="backgroundColor" red="0.39215686274509803" green="0.65098039215686276" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                 <state key="normal" title="Submit" image="sent-email"/>
+                                <connections>
+                                    <action selector="submitBtnClicked:" destination="isS-Sv-T1f" eventType="touchUpInside" id="jn5-kU-rzC"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="vGW-Nj-zIG"/>
                     </view>
                     <connections>
-                        <outlet property="approvedUIView" destination="RGC-c2-kyY" id="Ejj-l7-gsg"/>
+                        <outlet property="approvedBtn" destination="Ht9-LT-4aS" id="kOz-ZY-w4O"/>
                         <outlet property="communicationTableView" destination="Kk3-st-DCF" id="trn-UE-VFG"/>
+                        <outlet property="editPostBtn" destination="1iz-7M-8Pz" id="xKP-JG-F0Y"/>
                         <outlet property="facebookBtn" destination="bUM-Ls-LWI" id="8F2-Tu-a8Y"/>
-                        <outlet property="pendingUIView" destination="yvu-ie-aef" id="EUW-jN-AKP"/>
-                        <outlet property="rejectedUIView" destination="9YW-9I-wzy" id="s8M-Qu-IAt"/>
+                        <outlet property="pendingBtn" destination="ZMl-m3-CAH" id="iix-gn-xu5"/>
+                        <outlet property="postTextField" destination="gNM-hz-f2g" id="sEa-oM-0Yn"/>
+                        <outlet property="rejectedBtn" destination="oaM-xD-RY0" id="6Bs-jO-x1h"/>
                         <outlet property="twitterBtn" destination="HSQ-aj-DlJ" id="MZJ-St-s8m"/>
-                        <outlet property="underUIView" destination="ka5-Fu-EoE" id="QkT-Lf-XJq"/>
+                        <outlet property="underReviewBtn" destination="5We-5s-HmB" id="Luo-Fd-YaM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LHQ-Bp-ChR" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1477,7 +1502,7 @@
         <image name="clips" width="16" height="14"/>
         <image name="facebook-group" width="20" height="20"/>
         <image name="faq" width="18" height="18"/>
-        <image name="hold" width="16.333333969116211" height="20.333333969116211"/>
+        <image name="hold" width="16" height="20"/>
         <image name="home" width="20" height="20"/>
         <image name="home-black" width="27" height="27"/>
         <image name="logo" width="138" height="138"/>
@@ -1487,8 +1512,9 @@
         <image name="my-account-black" width="18" height="18"/>
         <image name="no-cast" width="88" height="81"/>
         <image name="notification" width="18" height="18"/>
-        <image name="passage-of-time" width="20" height="18.666666030883789"/>
-        <image name="sent-email" width="16" height="14.5"/>
+        <image name="passage-of-time" width="20" height="18"/>
+        <image name="pencil" width="14" height="14"/>
+        <image name="sent-email" width="16" height="14"/>
         <image name="twitter-group" width="20" height="20"/>
     </resources>
     <inferredMetricsTieBreakers>
